Fix header on mobile

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -24,17 +24,23 @@
 
 .header {
     @media (max-width: $screen-md-min) {
-        padding-top: 0px !important;
+        padding: 0px !important;
     }
     height:480px !important;
     background-color:$brand-primary !important;
     background: linear-gradient(30deg, $brand-primary 0%, $brand-orange 100%);
 }
 
-.header h1, .header h2, .header h3, .header h4, .header h5, .header h6, .header p, .header span {
+.header h1, .header h2 {
     color: $text-on-primary !important;
+}
+
+.header h3, .header h4, .header h5, .header h6, .header p, .header span {
+    color: $text-on-primary !important;
+}
+
+.row {
     @media (max-width: $screen-md-min) {
-        margin-left: -50% !important;
-        margin-right: -50% !important;
+        margin-left: 0px !important;
     }
 }
